<resources>
    <string name="app_name">Time tracker</string>
    <string name="sign_in">Sign in</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="SignUp">Create one</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="register">Register now</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="no_account_yet">No account yet? \u0020</string>
    <string name="add_task">Add task</string>
    <string name="task_name">Task name</string>
    <string name="nameTask">Task name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="view">VIEW</string>
</resources>
